Wed May 19 14:34:52 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/andmaybepostlist.cc,matcher/andmaybepostlist.h,
	  matcher/orpostlist.cc: Fix a bug causing documents to be skipped
	  when OR decayed to AND_MAYBE, if the new RHS was behind the LHS
	  at the time of the decay.  Fixes #476.
	* tests/api_backend.cc: Add test case ordecay2 as a regression test
	  of this.  Also, remove some debug output in ordecay1, to speed it
	  up quite a bit.

Wed May 19 11:48:07 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/orpostlist.cc,tests/api_backend.cc: Fix a bug in the
	  decay from OR to AND: if the decay happened when the two
	  sub-postlists were on different docids, but the higher of those
	  docids actually occurred in both postlists, the higher docid
	  would be incorrectly skipped.  Add regression test ordecay1 to
	  test this.

Wed May 19 10:36:55 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_backend.cc,tests/api_compact.cc,
	  tests/harness/testrunner.cc,tests/harness/testrunner.h: Add new
	  test backend selection flag "generated", to select only backends
	  which support generated test databases.

Wed May 19 03:14:15 GMT 2010  Olly Betts <olly@survex.com>

	* api/,backends/brass/,backends/chert/,
	  backends/contiguousalldocspostlist.cc,backends/flint/,
	  backends/inmemory/inmemory_database.cc,
	  backends/remote/remote-database.cc,backends/slowvaluelist.cc,
	  common/utils.h,expand/esetinternal.cc,matcher/phrasepostlist.cc,
	  net/remoteserver.cc,net/remotetcpclient.cc,
	  queryparser/termgenerator.cc,tests/,
	  tests/harness/backendmanager_multi.cc,
	  tests/harness/backendmanager_remote.cc,
	  tests/harness/backendmanager_remotetcp.cc,tests/internaltest.cc,
	  tests/perftest/perftest.cc,tests/perftest/perftest_matchdecider.cc,
	  tests/perftest/perftest_randomidx.cc,tests/queryparsertest.cc,
	  tests/termgentest.cc: Fully migrate from om_tostring() to str().
