@@ -99,4 +99,12 @@ export XAPIAN_TESTSUITE_VALGRIND
 vg_opts='--log-file=.valgrind.log.%p --leak-resolution=high'
 vg_opts="$vg_opts --suppressions=$srcdir/valgrind.supp"
 echo "Running test '$@' under valgrind"
+# zlib can produce "uninitialised" output from "initialised" input - the output
+# does decode to the input, so this is presumably just some unused bits in the
+# output, so weuse an LD_PRELOAD hack to get valgrind to check the input is
+# initialised and then tell it that the output is initialised.
+if [ -f zlib-vg.so ] ; then
+  LD_PRELOAD=./zlib-vg.so
+  export LD_PRELOAD
+fi
 exec $LIBTOOL --mode=execute $VALGRIND $vg_opts "$@"
